@@ -677,12 +677,8 @@ clear_ref_from_call_outs (void)
 
         clear_ref_in_callback(&(cop->fun));
 
-        if (NULL != (ob = cop->command_giver) && ob->flags & O_DESTRUCTED)
-        {
-            ob->ref = 0;
-            ob->prog->ref = 0;
-            clear_inherit_ref(ob->prog);
-        }
+        if (NULL != (ob = cop->command_giver))
+            clear_object_ref(ob);
     }
 } /* clear_ref_from_call_outs() */
 
